[package]
name = "async_io"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10.1"
tokio = { version = "1.43", features = [
    "macros",
    "io-util",
    "net",
    "rt",
    "signal",
    "sync",
] }

[dev-dependencies]
mockall = "0.14.0"
tokio-test = "0.4.4"
