[package]
name = "fourier_transform"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.*"
plotlib = { git = 'https://github.com/milliams/plotlib.git', branch = 'dependabot/cargo/svg-0.13.0' }
